# otus_cpp8_boost

./: CMakeCache.txt  CMakeLists.txt  Duplikate.cpp  Duplikate.h  Hash.cpp  Hash.h  HashFile.cpp  HashFile.h  README.md  main.cpp  version.h.in
.github/workflows/: c-cpp.yml
